# agentic-content-generation

./: .env.example  CHANGES.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  ENHANCEMENTS.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  Makefile  PITCH.md  PROJECT_DESCRIPTION.md  README.md  README_HF_SPACES.md  SETUP.md  app.py  main.py  profile.example.yaml  pyproject.toml  requirements.txt  test_simple.py  ui_app.py  verify_search.py
adk_wrapper/: agent.py
adk_wrapper/.adk/eval_history/: adk_wrapper_content_generation_tests_1763653829.5835211.evalset_result.json  adk_wrapper_debug_test_1763653680.733773.evalset_result.json
docs/: ARCHITECTURE.md  PROFILES.md  README.md  SESSIONS.md  architecture-diagram.mermaid
docs/deployment/: DEPLOYMENT.md  HUGGINGFACE_DEPLOYMENT.md  QUICK_DEPLOY.md
docs/guides/: SETUP.md  TESTING.md
output/: content_large_language_models_and_ai_agents.txt  content_observability_test.txt  content_session_resume_test.txt  content_session_test.txt  content_test_topic.txt
src/: __init__.py  agent.py  agents.py  config.py  profile.py  profile_editor.py  requirements.txt  session_manager.py  tools.py
tests/: __init__.py  conftest.py  debug.evalset.json  integration_tests.evalset.json  simple.evalset.json  test_agent_wrapper.py  test_agents.py  test_api_connection.py  test_config.json  test_profile.py  test_remote_agent.py  test_session_manager.py  test_tools.py
